scripts/nullaway/nullgtn/urld5c972ef81_noxx90_jflam_tgz-pJ8-fr_noxx90_jflam_BenchmarkJ8.txt
../nullgtn/urld5c972ef81_noxx90_jflam_tgz-pJ8-fr_noxx90_jflam_BenchmarkJ8/src/fr/noxx90/jflam/model/Form.java:20: error: [NullAway] initializer method does not guarantee @NonNull field name (line 10) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Form(float a, float b, float c, float d, float e, float f, float weight, Color color) {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/urld5c972ef81_noxx90_jflam_tgz-pJ8-fr_noxx90_jflam_BenchmarkJ8/src/fr/noxx90/jflam/model/Form.java:32: error: [NullAway] initializer method does not guarantee @NonNull field name (line 10) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Form(Triangle triangle, float weight, Color color) {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/urld5c972ef81_noxx90_jflam_tgz-pJ8-fr_noxx90_jflam_BenchmarkJ8/src/fr/noxx90/jflam/renderer/impl/DefaultHistogramRenderer.java:18: error: [NullAway] @NonNull field rangeMap not initialized
    protected RangeMap<Float, Form> rangeMap;
                                    ^
    (see http://t.uber.com/nullaway )
../nullgtn/urld5c972ef81_noxx90_jflam_tgz-pJ8-fr_noxx90_jflam_BenchmarkJ8/src/fr/noxx90/jflam/renderer/impl/DefaultHistogramRenderer.java:29: error: [NullAway] parameter flame is @NonNull, but parameter in superclass method fr.noxx90.jflam.renderer.HistogramRenderer.render(fr.noxx90.jflam.model.Flame,int,int,int,int) is @Nullable
    public Histogram render(Flame flame, int width, int height, int quality, int sampling) {
                                  ^
    (see http://t.uber.com/nullaway )
../nullgtn/urld5c972ef81_noxx90_jflam_tgz-pJ8-fr_noxx90_jflam_BenchmarkJ8/src/fr/noxx90/jflam/renderer/impl/DefaultImageRenderer.java:14: error: [NullAway] parameter histogram is @NonNull, but parameter in superclass method fr.noxx90.jflam.renderer.ImageRenderer.render(fr.noxx90.jflam.model.Histogram) is @Nullable
    public BufferedImage render(Histogram histogram) {
                                          ^
    (see http://t.uber.com/nullaway )
../nullgtn/urld5c972ef81_noxx90_jflam_tgz-pJ8-fr_noxx90_jflam_BenchmarkJ8/src/fr/noxx90/jflam/functions/Spherical.java:10: error: [NullAway] parameter x is @NonNull, but parameter in superclass method fr.noxx90.jflam.model.Function.doCompute(float,float) is @Nullable
    protected Float doCompute(float x, float y) {
                                    ^
    (see http://t.uber.com/nullaway )
../nullgtn/urld5c972ef81_noxx90_jflam_tgz-pJ8-fr_noxx90_jflam_BenchmarkJ8/src/fr/noxx90/jflam/functions/Linear.java:9: error: [NullAway] parameter x is @NonNull, but parameter in superclass method fr.noxx90.jflam.model.Function.doCompute(float,float) is @Nullable
    protected Point2D.Float doCompute(float x, float y) {
                                            ^
    (see http://t.uber.com/nullaway )
../nullgtn/urld5c972ef81_noxx90_jflam_tgz-pJ8-fr_noxx90_jflam_BenchmarkJ8/src/fr/noxx90/jflam/functions/Sinusoidal.java:10: error: [NullAway] parameter x is @NonNull, but parameter in superclass method fr.noxx90.jflam.model.Function.doCompute(float,float) is @Nullable
    protected Float doCompute(float x, float y) {
                                    ^
    (see http://t.uber.com/nullaway )
../nullgtn/urld5c972ef81_noxx90_jflam_tgz-pJ8-fr_noxx90_jflam_BenchmarkJ8/src/fr/noxx90/jflam/functions/Swirl.java:10: error: [NullAway] parameter x is @NonNull, but parameter in superclass method fr.noxx90.jflam.model.Function.doCompute(float,float) is @Nullable
    protected Float doCompute(float x, float y) {
                                    ^
    (see http://t.uber.com/nullaway )
../nullgtn/urld5c972ef81_noxx90_jflam_tgz-pJ8-fr_noxx90_jflam_BenchmarkJ8/src/fr/noxx90/jflam/FlameLogger.java:16: error: [NullAway] initializer method does not guarantee @NonNull field writer (line 14) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public FlameLogger() {
           ^
    (see http://t.uber.com/nullaway )
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
10 errors
